@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.228 2002-09-13 19:33:37 castaglia Exp $
+$Id: NEWS,v 1.229 2002-09-13 20:21:49 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -21,6 +21,7 @@ CVS
              in WRITE logging class
 - Bug 1065 - New directives to limit file size on upload and download
 - Bug 1658 - Separate session/daemon resource limit settings
+- Bug 1436 - Feature Enhancement: Timeouts on a <Virtualhost> basis
 
 1.2.6 - Released 2002-09-04
 ---------------------------------
